# ansible-role-whisper

./: .gitreview  .zuul.yaml  README.md  README.rst  setup.cfg
defaults/: main.yaml
doc/source/: conf.py
meta/: main.yml
tasks/: install.yaml
tasks/install/: git.yaml  pip.yaml
tests/playbooks/: run.yaml
vars/: RedHat.yaml
